--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                         <div class="swiper-slide">
                             <div class="product">
                                 <div class="product-img">
-                                    <img src="images/papas.png" alt="">
+                                    <img src="images/Papas.png" alt="">
                                 </div>
                                 <div class="product-txt">
                                     <h4>Papas</h4>
